# curso_ros

./: .bashrc
catkin/: .gitignore
catkin/devel/: .catkin  .rosinstall  setup.sh
catkin/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
catkin/devel/lib/pkgconfig/: test.pc
catkin/devel/share/test/cmake/: testConfig.cmake
catkin/src/test/: CMakeLists.txt  package.xml
catkin/src/test/cfg/: DYN.cfg
catkin/src/test/launch/: all.launch
catkin/src/test/scripts/: ej.py  talker.py
sketchbook/nodo/: nodo.ino
